@@ -89,6 +89,7 @@ export(dynEGA.ind.pop)
 export(entropyFit)
 export(ergoInfo)
 export(genTEFI)
+export(ggm_inference.GGMnonreg)
 export(glla)
 export(hierEGA)
 export(igraph2matrix)
